--- a/CSS/class-6/style.css
+++ b/CSS/class-6/style.css
@@ -2,28 +2,67 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-size: 16px; */
-}
-h1 {
-    font-size: 2em;
-}
-.main_div {
-    border: 1px solid;
-    width: 800px;
-    height: 300px;
-    margin-left: 150px ;
-    margin-top: 70px;
-    background-color: azure;
-    padding-top: 10px;
-    padding-left: 15px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-}
- .box {
-    border: 1px solid;
-    width: 100px;
+  }
+  
+  .main-section {
+    border: 3px solid black;
+    display: flex;
+    /* flex-direction: column; */
+    flex-wrap: wrap;
+    /* justify-content: center; */
+    /* justify-content: end; */
+    justify-content:center;
+    height: 100vh;
+    width: 80vw;
+    align-items: center;
+  }
+  
+  .box {
     height: 100px;
-    background-color: bisque;
+    width: 100px;
+    border: 1px solid;
     text-align: center;
-
- }
+  }
+  
+  #box-1 {
+    display: flex;
+    background-color: aqua;
+    /* flex-grow: 1; */
+    flex-grow: 2;
+    order: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #box-2 {
+    display: flex;
+    background-color: red;
+    /* flex-grow: 1; */
+    flex-grow: 3;
+    order: 1;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #box-3 {
+    display: flex;
+    background-color: rgb(212, 132, 179);
+    /* flex-grow: 1; */
+    flex-grow: 4;
+    ;
+    order: 4;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  #box-4 {
+    display: flex;
+    background-color: yellow;
+    /* flex-grow: 1; */
+    /* flex-shrink: 1; */
+    flex-shrink: 1;
+    order: 2;
+    justify-content: center;
+    align-items: center;
+  }
