--- a/CSS/class-8/style.css
+++ b/CSS/class-8/style.css
@@ -2,67 +2,42 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
-  
-  .main-section {
-    border: 3px solid black;
-    display: flex;
-    /* flex-direction: column; */
-    flex-wrap: wrap;
-    /* justify-content: center; */
-    /* justify-content: end; */
-    justify-content:center;
-    height: 100vh;
-    width: 80vw;
-    align-items: center;
-  }
-  
-  .box {
-    height: 100px;
+
+}
+.container {
+    background-color: rgb(253, 241, 241);
+}
+.box {
     width: 100px;
-    border: 1px solid;
-    text-align: center;
-  }
-  
-  #box-1 {
-    display: flex;
-    background-color: aqua;
-    /* flex-grow: 1; */
-    flex-grow: 2;
-    order: 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #box-2 {
-    display: flex;
-    background-color: red;
-    /* flex-grow: 1; */
-    flex-grow: 3;
-    order: 1;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #box-3 {
-    display: flex;
-    background-color: rgb(212, 132, 179);
-    /* flex-grow: 1; */
-    flex-grow: 4;
-    ;
-    order: 4;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #box-4 {
-    display: flex;
-    background-color: yellow;
-    /* flex-grow: 1; */
-    /* flex-shrink: 1; */
-    flex-shrink: 1;
-    order: 2;
-    justify-content: center;
-    align-items: center;
-  }
+    height: 100px;
+    border: 2px solid;
+
+}
+#box1 {
+    background-color: lightcyan;
+    position: static;
+}
+ 
+#box2 {
+    background-color: lightseagreen;
+    position: relative;
+    left: 50px;
+    top: 0px;
+}
+#box3 {
+    background-color: lightpink;
+    position: absolute;
+    left: 60px;
+    top: 0px;
+    right: 0px;
+    z-index: 1;
+}
+#box4 {
+    width: 90vw;
+    background-color: lightslategray;
+    position: fixed ;
+    top: 0;
+    right: 0px;
+    z-index: 2;
+}
+ 
